# GrapePi

./: .gitattributes  .gitignore  README.md  grape_pi.py  main.py  parallel.sh  pyproject.toml  run_batch_protein_single.sh  run_batch_yeast_gcnconv.sh  run_batch_yeast_graphsage.sh
configs/: example.yaml
configs/protein/: grapepi.yaml  grapepi_3_layer_MLP.yaml  grapepi_gatconv.yaml  grapepi_gcnconv.yaml  grapepi_sageconv.yaml
configs/protein/hydra/help/: my_app_help.yaml
configs/pyg/: example_node.yaml
data/gastric_all_data/raw/interaction/: 9606.protein.links.v12.0-translated.csv
data/gastric_all_data/raw/protein/: all_proteins.csv
data/yeast-LCQ/raw/protein/: yeast-LCQ.csv
data/yeast-ORBI/raw/interaction/: yeast_interaction.csv
data/yeast-ORBI/raw/protein/: yeast-ORBI.csv
grids/: yeast-gcnconv.txt  yeast-graphsage.txt
notebooks/: gastric-sample-pre-analysis.ipynb  protein_embedding_test.ipynb
notebooks/Yeast-data-pre-processing/: yeast-analysis.ipynb
notebooks/data_pre_processing/: bruker_data_processing.ipynb  bruker_data_processing_cellline.ipynb  human-ORBI.ipynb  mapping_ENSP_to_accession.ipynb
notebooks/data_pre_processing/Waters-data-processing/: batch_processing.sh  scripts.txt
notebooks/data_pre_processing/Waters_data_processing/: calc_local_fdr.ipynb  calc_local_fdr.py  csv_transformer.py  gastric-sample-labeling.ipynb
notebooks/design-space-analysis/: design_space.ipynb
notebooks/post-training-evaluation/: model-evaluation-yeast.ipynb
notebooks/post-training-evaluation/results/: gastric_all_proteins_df.csv  test_proteins.csv
notebooks/post-training-evaluation/results/pred_prob/: KEGG_2021_Human.human.enrichr.reports.txt
notebooks/post-training-evaluation/results/pred_unique/: KEGG_2021_Human.human.enrichr.reports.txt
notebooks/post-training-evaluation/results/raw_prob/: KEGG_2021_Human.human.enrichr.reports.txt  KEGG_2021_Human.human.enrichr.reports_raw.txt
notebooks/post_training_evaluation/: model-evaluation-gastric.ipynb
notebooks/post_training_evaluation/results/: degree_proteins_df.csv  gastric_all_proteins_df.csv  test_proteins.csv  yeast_LCQ_all_proteins_df.csv  yeast_ORBI_all_proteins_df.csv
notebooks/post_training_evaluation/results/pred_prob/: KEGG_2021_Human.human.enrichr.reports_pred.txt
notebooks/sensitivity_analysis/: different_labeling_criterion.sh  different_threshold.sh  reproducibility_across_sample_gastric.ipynb  reproducibility_across_sample_yeast.ipynb  run_different_config.ipynb  test_with_bruker_data.ipynb
src/: __init__.py
src/custom_graphgym/: __init__.py  logger.py
src/custom_graphgym/act/: none.py
src/custom_graphgym/config/: __init__.py  example.py  grape_pi.py
src/custom_graphgym/head/: protein.py
src/custom_graphgym/layer/: gcnconv_with_edgeweight.py
src/custom_graphgym/loader/: example.py  protein.py
src/custom_graphgym/loss/: protein.py
src/custom_graphgym/metrics/: grape_pi.py
src/custom_graphgym/train/: example.py  gcnconv_model_builder.py  graphsage_model_builder.py
src/utils/: best_model.py  config.py  train.py
tests/: test_grape_pi.py  test_protein.py
tests/data/yeast-ORBI/: yeast-ORBI_mapping.csv
tests/data/yeast-ORBI/raw/protein/: yeast-ORBI.csv
tests/data/yeast-ORBI/raw/reference/: negative.txt  positive.txt
tutorials/example/: Grape-Pi-GAT.ipynb  Grape-Pi-GCNConv.ipynb  Grape-Pi-SAGEConv1.ipynb
